<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ShelterPage">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capacity_no_colon"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_vacancies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vacancies_no_colon"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_restrictions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restrictions_no_colon"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp"
            tools:lines="2" />

        <TextView
            android:id="@+id/text_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coordinates"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_special_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/special_notes"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mapButtonAction"
            android:text="@string/view_in_map"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="backButtonAction"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/reserve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:onClick="reservePageButtonAction"
        android:text="@string/reserve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_shelter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:onClick="editShelterButtonAction"
        android:text="@string/edit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>